imgcatdatadir = $(datadir)/imgcat

install-data-local:
	$(MKDIR_P) $(DESTDIR)$(imgcatdatadir)/css
	$(MKDIR_P) $(DESTDIR)$(imgcatdatadir)/css/fonts
	$(MKDIR_P) $(DESTDIR)$(imgcatdatadir)/js
	$(INSTALL_DATA) index.html $(DESTDIR)$(imgcatdatadir)
	$(INSTALL_DATA) css/justifiedGallery.min.css $(DESTDIR)$(imgcatdatadir)/css
	$(INSTALL_DATA) css/flackr.css $(DESTDIR)$(imgcatdatadir)/css
	$(INSTALL_DATA) css/bootstrap.min.css $(DESTDIR)$(imgcatdatadir)/css
	$(INSTALL_DATA) css/fonts/proxima-nova-bold.woff2 $(DESTDIR)$(imgcatdatadir)/css/fonts
	$(INSTALL_DATA) css/fonts/ProximaNova-Reg-webfont-v2.woff $(DESTDIR)$(imgcatdatadir)/css/fonts
	$(INSTALL_DATA) css/fonts/proxima-nova-light.woff2 $(DESTDIR)$(imgcatdatadir)/css/fonts
	$(INSTALL_DATA) css/fonts/proxima-nova-semibold.woff2 $(DESTDIR)$(imgcatdatadir)/css/fonts
	$(INSTALL_DATA) css/fonts/ProximaNova-Sbold-webfont-v2.woff $(DESTDIR)$(imgcatdatadir)/css/fonts
	$(INSTALL_DATA) css/fonts/proxima-nova-regular.woff2 $(DESTDIR)$(imgcatdatadir)/css/fonts
	$(INSTALL_DATA) css/bootstrap.min.css.map $(DESTDIR)$(imgcatdatadir)/css/fonts
	$(INSTALL_DATA) js/jquery.justifiedGallery.min.js $(DESTDIR)$(imgcatdatadir)/js
	$(INSTALL_DATA) js/bootstrap.min.js $(DESTDIR)$(imgcatdatadir)/js
	$(INSTALL_DATA) js/jquery.min.js $(DESTDIR)$(imgcatdatadir)/js
	$(INSTALL_DATA) js/bootstrap.min.js.map $(DESTDIR)$(imgcatdatadir)/js
